--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,5 +8,6 @@
     <p><a href="/sample/hello">/sample/hello</a></p>
     <p><a href="/rest/sample/hello">/rest/sample/hello</a></p>
     <p><a href="/profile/test">/profile/test</a></p>
+    <p><a href="/sample/listByMapper">/sample/listByMapper</a></p>
 </body>
 </html>
