mybatis: using mybatis annotation @Mapper

--- a/bin/main/static/index.html
+++ b/bin/main/static/index.html
@@ -8,6 +8,6 @@
     <p><a href="/sample/hello">/sample/hello</a></p>
     <p><a href="/rest/sample/hello">/rest/sample/hello</a></p>
     <p><a href="/profile/test">/profile/test</a></p>
-    <p><a href="/sample/listByMapper">/sample/listByMapper</a></p>
+    <p><a href="/sample/list">/sample/list</a></p>
 </body>
 </html>
