--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,5 +9,6 @@
     <p><a href="/rest/sample/hello">/rest/sample/hello</a></p>
     <p><a href="/profile/test">/profile/test</a></p>
     <p><a href="/sample/list">/sample/list</a></p>
+    <p><a href="/sample/listBySql">/sample/listBySql</a></p>
 </body>
 </html>
