--- a/bin/main/static/index.html
+++ b/bin/main/static/index.html
@@ -10,5 +10,6 @@
     <p><a href="/profile/test">/profile/test</a></p>
     <p><a href="/sample/list">/sample/list</a></p>
     <p><a href="/sample/listBySql">/sample/listBySql</a></p>
+    <p><a href="/sample/paging">/sample/paging</a></p>
 </body>
 </html>
