--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
     <p>-----------------------------</p>
     <p><a href="/sample/list">/sample/list</a></p>
     <p><a href="/sample/listBySql">/sample/listBySql</a></p>
-    <p><a href="/sample/paging">/sample/paging</a></p>
-    <p><a href="/sample/pageBySQL">/sample/pageBySQL</a></p>
+    <p><a href="/sample/paging?size=3&current=1">/sample/paging</a></p>
+    <p><a href="/sample/pageBySQL?size=3&current=1">/sample/pageBySQL</a></p>
 </body>
 </html>
