--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+	<p>-----------------------------</p>
+	<p><a href="/html/vue_test">vue test</a></p>
     <p>-----------------------------</p>
     <p><a href="/sample/hello">/sample/hello</a></p>
     <p><a href="/rest/sample/hello">/rest/sample/hello</a></p>
