--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,21 +1,15 @@
-<!DOCTYPE HTML>
-<html>
-<head> 
-    <title>my-sample-boot</title> 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
-	<p>-----------------------------</p>
-	<p><a href="/html/vue_test">vue test</a></p>
-    <p>-----------------------------</p>
-    <p><a href="/sample/hello">/sample/hello</a></p>
-    <p><a href="/rest/sample/hello">/rest/sample/hello</a></p>
-    <p>-----------------------------</p>
-    <p><a href="/profile/test">/profile/test</a></p>
-    <p>-----------------------------</p>
-    <p><a href="/sample/list">/sample/list</a></p>
-    <p><a href="/sample/listBySql">/sample/listBySql</a></p>
-    <p><a href="/sample/paging?size=3&current=1">/sample/paging</a></p>
-    <p><a href="/sample/pageBySQL?size=3&current=1">/sample/pageBySQL</a></p>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Welcome to Vuetify</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
+    <!-- <link rel="icon" type="image/png" href="public/favicon-32x32.png" sizes="32x32"> -->
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="./dist/build.js"></script>
+  </body>
 </html>
